# giscc

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: sources.cmake  tests.cmake
examples/: README.txt  points.cc
include/giscc/: basealg.hpp  defs.hpp  delaunay.hpp  delauny.hpp  idw.hpp  primitives.hpp  rtree.hpp
src/: basealg.cpp
src/algorithms/: delaunay.cpp  delauny.cpp  idw.cpp
tests/: test_basealg.cpp  test_idw.cpp
